fixed imports in tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 anssdk.egg-info/
 build/
 dist/
-anssdk/__pycache__
-anssdk/tests/__pycache__
+*__pycache__*
 anssdk/test.py
 anssdk/setup_client.py
-anssdk/tests/api_key.txt
+*api_key.txt
